# csv-pro

./: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js
.github/workflows/: publish.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: csv_engine.rs  main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: data-grid.tsx
src/lib/: tauri.ts
