[package]
name = "csv-pro"
version = "0.1.0"
description = "High-Performance Desktop CSV Editor & Analytics"
authors = ["Antigravity", "Ngô Quang Thảo"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["api-all", "custom-protocol"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
tokio = { version = "1.32", features = ["full"] }
encoding_rs = "0.8"
encoding_rs_io = "0.1"
rayon = "1.8"
regex = "1.9"
uuid = { version = "1.4", features = ["v4", "serde"] }
lazy_static = "1.4"
crossbeam-channel = "0.5"
memmap2 = "0.7"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
